--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="navBar.css"/>
-    <link rel="stylesheet" href="footer.css"/>
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./navBar.css"/>
+    <link rel="stylesheet" href="./footer.css"/>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@400;500&display=swap");
     </style>
@@ -32,7 +32,7 @@
     <footer>
     </footer>
 
-    <script src="easy_background.js"></script>
+    <script src="./easy_background.js"></script>
 
     <script>
       easy_background(
@@ -40,19 +40,19 @@
 
         {
           slide: [
-            "/home-img/japaGarden.jpg",
-            "/home-img/rural.jpg",
-            "/home-img/fence.jpg",
-            "/home-img/benchGarden.jpg",
-            "/home-img/gazebo.jpg",
-            "/home-img/terrarium.jpg",
+            "./home-img/japaGarden.jpg",
+            "./home-img/rural.jpg",
+            "./home-img/fence.jpg",
+            "./home-img/benchGarden.jpg",
+            "./home-img/gazebo.jpg",
+            "./home-img/terrarium.jpg",
           ],
 
           delay: [4000, 4000, 4000, 4000, 4000, 4000],
         }
       );
     </script>
-    <script src="navBar.js"></script>
-    <script src="footer.js"></script>
+    <script src="./navBar.js"></script>
+    <script src="./footer.js"></script>
   </body>
 </html>
