--- a/quote.html
+++ b/quote.html
@@ -7,10 +7,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@400;500&display=swap");
     </style>
-    <link rel="stylesheet" href="quote.css" />
-    <link rel="stylesheet" href="navBar.css"/>
-    <link rel="stylesheet" href="footer.css"/>
-    <script src="quote.js"></script>
+    <link rel="stylesheet" href="./quote.css" />
+    <link rel="stylesheet" href="./navBar.css"/>
+    <link rel="stylesheet" href="./footer.css"/>
+    <script src="./quote.js"></script>
     <title>Quote</title>
   </head>
   <body>
@@ -195,6 +195,6 @@
     </div>
     <footer></footer>
   </body>
-  <script src="navBar.js"></script>
-  <script src="footer.js"></script>
+  <script src="./navBar.js"></script>
+  <script src="./footer.js"></script>
 </html>
