--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="contact.css" />
-    <link rel="stylesheet" href="navBar.css" />
-    <link rel="stylesheet" href="footer.css"/>
+    <link rel="stylesheet" href="./contact.css" />
+    <link rel="stylesheet" href="./navBar.css" />
+    <link rel="stylesheet" href="./footer.css"/>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@400;500&display=swap");
     </style>
@@ -58,6 +58,6 @@
   </section>
   <footer></footer>
   </body>
-  <script src="navBar.js"></script>
-  <script src="footer.js"></script>
+  <script src="./navBar.js"></script>
+  <script src="./footer.js"></script>
 </html>
