--- a/services.html
+++ b/services.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="services.css" />
-    <link rel="stylesheet" href="navBar.css" />
-    <link rel="stylesheet" href="footer.css"/>
+    <link rel="stylesheet" href="./services.css" />
+    <link rel="stylesheet" href="./navBar.css" />
+    <link rel="stylesheet" href="./footer.css"/>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@400;500&display=swap");
     </style>
@@ -54,7 +54,7 @@
         <div class="cardContent">
           <div class="cardImage">
             <span class="cardTitle">Residential Service</span>
-            <img src="services-img/laying_sod_3.jpg" />
+            <img src="./services-img/laying_sod_3.jpg" />
           </div>
 
           <div class="cardText">
@@ -73,7 +73,7 @@
         <div class="cardContent">
           <div class="cardImage">
             <span class="cardTitle">Commertial Services</span>
-            <img src="services-img/mowing_lawn_4.jpg" />
+            <img src="./services-img/mowing_lawn_4.jpg" />
           </div>
 
           <div class="cardText">
@@ -119,9 +119,9 @@
       </ul>
     </section>
     <ul class="servImg">
-      <li><img src="services-img/pruning_tree.jpg" /></li>
-      <li><img src="services-img/laying_tile.jpg" /></li>
-      <li><img src="services-img/pruning_tree_2.jpg" /></li>
+      <li><img src="./services-img/pruning_tree.jpg" /></li>
+      <li><img src="./services-img/laying_tile.jpg" /></li>
+      <li><img src="./services-img/pruning_tree_2.jpg" /></li>
     </ul>
     <section>
       <h2 id="section2">COMMERCIAL SERVICES</h2>
@@ -148,9 +148,9 @@
       </ul>
     </section>
     <ul class="servImg">
-      <li><img src="commercial-img/fertilization.jpg" /></li>
-      <li><img src="commercial-img/snow-removing.jpg" /></li>
-      <li><img src="commercial-img/landscape.jpg" /></li>
+      <li><img src="./commercial-img/fertilization.jpg" /></li>
+      <li><img src="./commercial-img/snow-removing.jpg" /></li>
+      <li><img src="./commercial-img/landscape.jpg" /></li>
     </ul>
     <div class="pBox">
       <p class="opening2">
@@ -162,6 +162,6 @@
     </div>
     <footer></footer>
   </body>
-  <script src="navBar.js"></script>
-  <script src="footer.js"></script>
+  <script src="./navBar.js"></script>
+  <script src="./footer.js"></script>
 </html>
